add "Apply script to instance"

--- a/forward_engineering/config.json
+++ b/forward_engineering/config.json
@@ -3,6 +3,7 @@
 	"filterName": "Gremlin script",
 	"namePrefix": "Gremlin",
 	"hasUpdateScript": false,
+	"applyScriptToInstance": true,
 	"level": {
 		"container": true,
 		"entity": false
