--- a/reverse_engineering/config.json
+++ b/reverse_engineering/config.json
@@ -1,7 +1,7 @@
 {
 	"errors": {
-		"NO_DATABASES": "There is no databases in this TinkerPop instance",
-		"WRONG_CONNECTION": "Cannot connect to TinkerPop instance"
+		"NO_DATABASES": "There is no databases in this Cosmos DB instance",
+		"WRONG_CONNECTION": "Cannot connect to Cosmos DB instance"
 	},
 	"excludeDocKind": ["id"],
 	"scenario": "getDatabases"
