--- a/properties_pane/entity_level/entityLevelConfig.json
+++ b/properties_pane/entity_level/entityLevelConfig.json
@@ -163,7 +163,22 @@ making sure that you maintain a proper JSON format.
 						"key": "entityType",
 						"value": "sub-node"
 					}
+				},
+				"dependency":{
+					"type": "not",
+					"values": {
+						"key": "entityType",
+						"value": "sub-node"
+					}
 				}
+			},
+			{
+				"propertyKeyword": "parentCollections",
+				"dependency":{
+					"key": "entityType",
+					"value": "sub-node"
+				},
+				"hidden":false
 			},
 			{
 				"propertyKeyword": "childCollection",
