--- a/properties_pane/container_level/containerLevelConfig.json
+++ b/properties_pane/container_level/containerLevelConfig.json
@@ -212,6 +212,9 @@ making sure that you maintain a proper JSON format.
 				"propertyType": "fieldList",
 				"template": "orderedList",
 				"templateOptions": {
+					"divider": "/",
+					"front": true,
+					"entityName": false,
 					"maxField": 1
 				}
 			},
