configured fe for splitted view

--- a/forward_engineering/config.json
+++ b/forward_engineering/config.json
@@ -15,5 +15,8 @@
 		{ "name": "Cosmos DB Script", "keyword": "cosmosdb", "fileExtensions": [ {
 			"label": "application/json", "value": "json"
 		} ] }
-	]
+	],
+	"splitView": {
+		"byOptions": true
+	}
 }
