--- a/properties_pane/container_level/containerLevelConfig.json
+++ b/properties_pane/container_level/containerLevelConfig.json
@@ -250,6 +250,13 @@ making sure that you maintain a proper JSON format.
 						"propertyType": "text"
 					},
 					{
+						"propertyName": "Activated",
+						"propertyKeyword": "isActivated",
+						"propertyTooltip": "Deactivated item will be not included in FE script",
+						"propertyType": "checkbox",
+						"defaultValue": true
+					},
+					{
 						"propertyName": "Path",
 						"propertyKeyword": "indexIncludedPath",
 						"propertyTooltip": "Included path index expression",
@@ -295,6 +302,13 @@ making sure that you maintain a proper JSON format.
 						"propertyKeyword": "name",
 						"propertyTooltip": "",
 						"propertyType": "text"
+					},
+					{
+						"propertyName": "Activated",
+						"propertyKeyword": "isActivated",
+						"propertyTooltip": "Deactivated item will be not included in FE script",
+						"propertyType": "checkbox",
+						"defaultValue": true
 					},
 					{
 						"propertyName": "Path",
@@ -343,6 +357,13 @@ making sure that you maintain a proper JSON format.
 						"propertyKeyword": "name",
 						"propertyTooltip": "",
 						"propertyType": "text"
+					},
+					{
+						"propertyName": "Activated",
+						"propertyKeyword": "isActivated",
+						"propertyTooltip": "Deactivated item will be not included in FE script",
+						"propertyType": "checkbox",
+						"defaultValue": true
 					},
 					{
 						"propertyName": "Path",
@@ -408,6 +429,13 @@ making sure that you maintain a proper JSON format.
 						"propertyKeyword": "name",
 						"propertyTooltip": "",
 						"propertyType": "text"
+					},
+					{
+						"propertyName": "Activated",
+						"propertyKeyword": "isActivated",
+						"propertyTooltip": "Deactivated item will be not included in FE script",
+						"propertyType": "checkbox",
+						"defaultValue": true
 					},
 					{
 						"propertyName": "Path",
