--- a/properties_pane/container_level/containerLevelConfig.json
+++ b/properties_pane/container_level/containerLevelConfig.json
@@ -144,10 +144,24 @@ making sure that you maintain a proper JSON format.
 				}
 			},
 			{
+				"propertyName": "Capacity mode",
+				"propertyKeyword": "capacityMode",
+				"propertyTooltip": "Choose the capacity mode",
+				"propertyType": "select",
+				"options": [
+					"Provisioned throughput",
+					"Serverless"
+				]
+			},
+			{
 				"propertyName": "Autoscale",
 				"propertyKeyword": "autopilot",
 				"propertyType": "checkbox",
-				"template": "boolean"
+				"template": "boolean",
+				"dependency": {
+					"key": "capacityMode",
+					"value": "Provisioned throughput"
+				}
 			},
 			{
 				"propertyName": "Maximum throughput (RU/s)",
@@ -156,8 +170,17 @@ making sure that you maintain a proper JSON format.
 				"propertyType": "numeric",
 				"valueType": "number",
 				"dependency": {
-					"key": "autopilot",
-					"value": true
+					"type": "and",
+					"values": [
+						{
+							"key": "autopilot",
+							"value": true
+						},
+						{
+							"key": "capacityMode",
+							"value": "Provisioned throughput"
+						}
+					]
 				}
 			},
 			{
@@ -167,11 +190,22 @@ making sure that you maintain a proper JSON format.
 				"propertyType": "numeric",
 				"valueType": "number",
 				"dependency": {
-					"type": "not",
-					"values": {
-						"key": "autopilot",
-						"value": true
-					}
+					"type": "and",
+					"values": [
+						{
+							"type": "not",
+							"values": [
+								{
+									"key": "autopilot",
+									"value": true
+								}
+							]
+						},
+						{
+							"key": "capacityMode",
+							"value": "Provisioned throughput"
+						}
+					]
 				}
 			},
 			{
