HCK-1128: add validation of gremlin endpoint

--- a/reverse_engineering/connection_settings_modal/connectionSettingsModalConfig.json
+++ b/reverse_engineering/connection_settings_modal/connectionSettingsModalConfig.json
@@ -20,9 +20,10 @@
 				"inputPlaceholder": "wss://*.gremlin.cosmos.azure.com:443/",
 				"inputTooltip": "Paste Gremlin endpoint",
 				"defaultValue": "",
-				"validation": {
-					"regex": "([^\\s])"
-				}
+				"validation": [{
+					"regex": "^wss://.+\\.gremlin\\.cosmos\\.azure\\.com:443",
+					"message": "Gremlin endpoint must satisfy the template:\nwss://<account name>.gremlin.cosmos.azure.com:443/"
+				}]
 			},
 			{
 				"inputLabel": "Account key",
