fix eslint reports

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "async": "2.6.0",
         "axios": "0.21.4",
         "gremlin": "3.4.3",
+        "lodash": "4.17.21",
         "qs": "6.9.4",
         "tunnel-ssh": "github:hackolade/tunnel-ssh"
     },
@@ -64,8 +65,8 @@
     },
     "devDependencies": {
         "@hackolade/hck-esbuild-plugins-pack": "0.0.1",
-        "@typescript-eslint/parser": "7.11.0",
         "@typescript-eslint/eslint-plugin": "7.11.0",
+        "@typescript-eslint/parser": "7.11.0",
         "esbuild": "0.20.2",
         "esbuild-plugin-clean": "1.0.1",
         "eslint": "8.57.0",
