HCK-7214: Derive complexAttribute from Polyglot without normalization

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
                 "hasMultipleParents": true
             },
             "enableComplexTypesNormalization": true,
+            "requireComplexTypesNormalization": true,
             "graphDB": true,
             "relationships": {
                 "connectOnEntityLevel": true,
