--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "CosmosDB-with-Gremlin-API",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "author": "hackolade",
     "engines": {
         "hackolade": "5.1.3",
@@ -19,6 +19,7 @@
                 "hasMultipleParents": true
             },
             "enableComplexTypesNormalization": true,
+            "requireComplexTypesNormalization": true,
             "graphDB": true,
             "relationships": {
                 "connectOnEntityLevel": true,
